<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/Add"/>
        <item
            android:id="@+id/delete"
            android:icon="@drawable/ic_remove_black_24dp"
            android:title="@string/Delete"/>
        <item
            android:id="@+id/setter"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/Settings"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/mail"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/EMail"/>
            <item
                android:id="@+id/sms"
                android:icon="@drawable/ic_sms_black_24dp"
                android:title="@string/SMS"/>
        </menu>
    </item>

</menu>
